--- a/templates/login.html
+++ b/templates/login.html
@@ -5,20 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='logo.ico') }}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #222;
-            /* Dark background color */
-            color: #fff;
-            /* Light text color */
+            background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, rgb(18,97,91),rgb(18,97,91));
+            height: 100vh;
         }
 
         .container {
-            background-color: #fff;
-            padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             min-width: 300px;
@@ -27,11 +24,21 @@
             align-items: center;
             flex-direction: column;
             margin: 30px auto;
+            max-width: -moz-fit-content;
             max-width: fit-content;
-            background: black;
-            color: white;
+            background: linear-gradient(75deg,rgba(205, 244, 242, 0.8),rgba(55, 184, 177, 0.6));
+            color: rgb(18, 17, 17);
             border-radius: 15px;
             padding: 40px;
+            margin-top: 100px;
+        }
+
+        .alert {
+            position: fixed;
+            width: 95%;
+            top: 60px;
+            right: 20px;
+            left: 10px;
         }
 
         h2 {
@@ -39,23 +46,25 @@
             margin-bottom: 20px;
         }
 
-        .alert {
-            margin: 5px 10px;
-        }
-
-        input,
-        .btn {
+        input {
             width: 100%;
             padding: 12px;
             margin-bottom: 15px;
             border: 1px solid #444;
-            /* Darker border color */
             border-radius: 3px;
             background-color: #555;
-            /* Input and button background color */
             color: #fff;
-            /* Light text color */
             box-sizing: border-box;
+        }
+
+        .have {
+            color: rgb(201, 235, 235);
+            margin: 15px 0;
+        }
+
+        .btn {
+            width: 100%;
+            padding: 10px 5px;
         }
 
         input::placeholder {
@@ -75,19 +84,22 @@
 
         .btn:hover {
             background-color: #0056b3;
-            /* Darker button background color on hover */
         }
 
         .error {
             color: #ff6347;
-            /* Red error message color */
             margin-bottom: 15px;
             text-align: center;
         }
+
+        .link:hover {
+            color: #cacdd0 !important;
+        }
+
     </style>
 </head>
 
-<body class="bg-dark text-light" data-bs-theme="dark">
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body text-light" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">KUCET</a>
@@ -108,9 +120,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/login">Login</a>
                     </li>
+                    {% if session['user'] %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -128,7 +142,7 @@
     </div>
     {% endif %}
 
-    <div class="container mt-5">
+    <div class="container">
         <div class="card-body">
             <h2 class="card-title text-center mb-3">Login</h2>
             <form method="POST" action="{{ url_for('login') }}">
@@ -142,6 +156,20 @@
             </form>
         </div>
     </div>
+    <center>
+        <p class="have">
+          Forgotten password?
+          <a class="link underline link-offset-2 link-light link-hover" href="/reset"
+            >Reset Password</a
+          >
+        </p>
+        <p class="have">
+          Don't have an account?
+          <a class="link underline link-offset-2 link-light icon-link-hover" href="/register"
+            >Register</a
+          >
+        </p>
+      </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
